--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 arbitrary = { version = "1.2.3", features = ["derive"] }
+argh = "0.1.10"
 egg = "0.9.2"
+image = "0.24.5"
 rand = "0.8.5"
 termcolor = "1.2.0"
